force remove json
Signed-off-by: kcw-grunt <mrkerrywashington@icloud.com>